fix invisible anchors inside card-body

--- a/blueprints/kanban/static/css/kanban.css
+++ b/blueprints/kanban/static/css/kanban.css
@@ -14,7 +14,7 @@
 	font-size: 1.0em;
 	margin: 0;
 }
-.card-saved a{
+.hide-icon a{
     visibility:hidden;
 }
 .card-saved:hover a {
